lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/array_get_element_klen_ext/array_get_element_klen_ext2/array_get_element_klen_ext2.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/array_get_element_klen_ext/array_get_element_klen_ext2/array_get_element_klen_ext2.c:41:32: error: use of undeclared identifier 's__a'
    array_get_element_klen_ext(s__a ,q_b__ext ,str_key ,q_b__klen );
                               ^
1 error generated.
